log
Sun Mar 20 21:24:04 HSP 2022: 
 tests:  0|6
total_score: 0/70
e5bdcf6
Sun Mar 20 21:25:43 HSP 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1bb5b4c
Sun Mar 20 21:26:09 HSP 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
94d1aec
Sun Mar 20 21:26:35 HSP 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
dea6772
Sun Mar 20 21:26:56 HSP 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
26b01db
Sun Mar 20 21:28:08 HSP 2022: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  11|1
total_score: 55/70
7e1db79
Sun Mar 20 21:31:42 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
86d30a6
Sun Mar 20 21:37:24 HSP 2022: 
 list.c | 26 ++++++++++++++++++--------
 1 file changed, 18 insertions(+), 8 deletions(-)
 tests:  10|2
total_score: 45/70
2f82a2e
Sun Mar 20 21:40:27 HSP 2022: 
 list.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:122:5: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
     else
     ^~~~
list.c:124:6: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
      list->tail = nodo;
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
57040e3
Sun Mar 20 21:40:50 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 60/70
26a0378
Sun Mar 20 21:55:21 HSP 2022: 
 list.c | 60 ++++++++++++++++++++++++++----------------------------------
 1 file changed, 26 insertions(+), 34 deletions(-)
 tests:  11|1
total_score: 60/70
f3853ca
Sun Mar 20 21:56:42 HSP 2022: 
 list.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 60/70
a4162d7
Sun Mar 20 21:58:14 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
930f244
Sun Mar 20 22:01:38 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 60/70
3f72a83
Sun Mar 20 22:02:40 HSP 2022: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  11|1
total_score: 60/70
2823127
Sun Mar 20 22:04:14 HSP 2022: 
 list.c | 21 ---------------------
 1 file changed, 21 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5dae0f1
Sun Mar 20 22:04:41 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
895725d
Sun Mar 20 22:12:19 HSP 2022: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
058782c
Sun Mar 20 22:13:28 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
8b1321d
Sun Mar 20 22:13:54 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2600b58
Sun Mar 20 22:14:24 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
fa46baf
Sun Mar 20 22:14:52 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
5eca91f
Sun Mar 20 22:15:15 HSP 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
a59ef9a
Sun Mar 20 22:17:59 HSP 2022: 
 list.c | 23 +++++++----------------
 1 file changed, 7 insertions(+), 16 deletions(-)
 tests:  10|2
total_score: 45/70
ca4b054
Sun Mar 20 22:18:05 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
ed26f53
Sun Mar 20 22:22:27 HSP 2022: 
 list.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
 tests:  11|1
total_score: 60/70
a9a9f71
Sun Mar 20 22:24:57 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
2fe4112
Sun Mar 20 22:25:28 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
754d2cf
